--- a/app/src/main/res/layout/activity_register_pub_key.xml
+++ b/app/src/main/res/layout/activity_register_pub_key.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_wallet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragment.CreateWalletFragment">
+    tools:context=".RegisterPubKey">
 
     <EditText
         android:id="@+id/etPassword"
@@ -15,8 +14,7 @@
         android:layout_centerHorizontal="true"
         android:inputType="textPassword"
         android:hint="@string/hint_password"
-        android:textAlignment="center"
-        android:importantForAutofill="no" />
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/btnCreateWallet"
@@ -27,23 +25,5 @@
         android:gravity="center"
         android:text="@string/create_wallet"
         style="?android:attr/buttonBarButtonStyle"/>
-
-    <TextView
-        android:id="@+id/tvCreatedWalletAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnCreateWallet"
-        android:layout_centerHorizontal="true"
-        tools:layout_editor_absoluteX="186dp"
-        tools:layout_editor_absoluteY="327dp" />
-
-    <TextView
-        android:id="@+id/tvCreatedWalletPath"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvCreatedWalletAddress"
-        android:layout_centerHorizontal="true"
-        tools:layout_editor_absoluteX="186dp"
-        tools:layout_editor_absoluteY="327dp" />
 
 </RelativeLayout>
