--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,4 +15,10 @@
         android:textSize="20dp"
         android:textAlignment="center"/>
 
+    <Button
+        android:id="@+id/btn_start_show"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
 </LinearLayout>
