--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,6 +19,12 @@
         android:id="@+id/btn_start_show"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="퀴즈쇼 입장" />
+
+    <Button
+        android:id="@+id/btn_request_prize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="상품 수령" />
 
 </LinearLayout>
