--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,11 +11,27 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QZ"
+        android:text="BLOCK"
         android:textSize="50sp" />
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/Google_Login"
+
+    <TextView
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="QuizShow"
+        android:textSize="35sp" />
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="재밌는 문제를 풀고 코인을 획득하세요!"
+        android:textSize="15sp" />
+
+    <com.google.android.gms.common.SignInButton
+        android:layout_marginTop="50dp"
+        android:padding="10dp"
+        android:id="@+id/Google_Login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </com.google.android.gms.common.SignInButton>
 
